--- a/SardiniaInFood/index.html
+++ b/SardiniaInFood/index.html
@@ -1,7 +1,7 @@
 <!--
 To change this template, choose Tools | Templates
 and open the template in the editor.
--->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -17,4 +17,5 @@ and open the template in the editor.
             </form>
         </div>
     </body>
-</html>
+</html>-->
+test inserimento
