--- a/SardiniaInFood/index.html
+++ b/SardiniaInFood/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <div><h1>TEST DOPO PROBLEMI</h1>
+        <div>
             <h1>PROGETTO AMM: SardiniaInFood</h1>
             <form name="page" action="php/index.php" method="get">
                 <input type="hidden" name="page" value="0">
@@ -18,5 +18,3 @@ and open the template in the editor.
         </div>
     </body>
 </html>
-
-
