paginazione, amministratore, update database

--- a/SardiniaInFood/index.html
+++ b/SardiniaInFood/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
     <body>
         <div>
             <h1>PROGETTO AMM: SardiniaInFood</h1>
-            <form name="page" action="php/index.php" method="get">
+            <form name="page" action="php/index.php" method="GET">
                 <input type="hidden" name="page" value="0">
                 <input type="submit" value="ACCEDI AL PROGETTO">
             </form>
