--- a/SardiniaInFood/index.html
+++ b/SardiniaInFood/index.html
@@ -5,15 +5,64 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>SardiniaInFoo - Presentazione</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
+        <h4>Progetto di Amministrazione di Sistema, anno 2015/2016</h4>
+        <h4>Carlo Aresu matricola: 38198</h4>        
+        <h2>Descrizione dell'applicazione</h2>
+        <p>"SardiniaInFood" è un'applicazione web responsive che permette di effettuare delle recensioni e votare la propria attivit&agrave; di ristoranzione preferita</p>
+        <p>In particolare, il cliente potrà:</p>
+        <ul>
+            <li>registrarsi sul sito</li>
+            <li>cancellare il proprio profilo</li>
+            <li>effettuare delle ricerche per luogo e/o per tipo di attivit&agrave;</li>
+            <li>inserire un'attivit&agrave; di ristoranzione nella propria lista dei preferiti</li>
+            <li>fare delle ricerche nella propria lista dei preferiti</li>
+            <li>gestire la lista dei preferiti</li>
+            <li>esprimere un voto in base al servizio ricevuto e al rapporto qualit&agrave;/prezzo</li>
+            <li>scrivere recensioni/commenti</li>
+        </ul>
+        <p>L'azienda (attivit&agrave; di ristorazione) potrà:</p>
+        <ul>
+            <li>registrarsi sul sito</li>
+            <li>cancellare il proprio profilo</li>
+            <li>vededere alcune statistiche che la riguardano</li>
+            <li>modificare il proprio profilo</li>
+        </ul>
+        <p>Infine l'amministratore del sito potrà:</p>
+        <ul>
+            <li>vedere alcune statistiche che riguardano l'applicazione</li>
+            <li>moderare le recensioni</li>
+        </ul>
+        <h2>Requisiti del progetto</h2>
+        <p>
+            Il progetto implementa tutti i requisiti proposti:
+        </p>
+        <ul>
+            <li>Utilizzo di HTML e CSS</li>
+            <li>Utilizzo di PHP e MySQL</li>
+            <li>Utilizzo di javascript (per mezzo di jQuery)</li>
+            <li>Utilizzo del pattern MVC</li>
+            <li>Due ruoli: lettore e bibliotecario</li>
+            <li>transazioni</li>
+            <li>funzionalità ajax</li>
+        </ul>
+        <h2>Accesso all'applicazione</h2>
+         <ul>
+            <li>account azienda - </li>
+            <li>account cliente - </li>
+        </ul>
+        <p>Cliccare <a href="#">qui</a> per accedere all'applicazione.</p>
+<p>&egrave; possibile visualizzare il codice sorgente del progetto: <a href="#">https://github.com/</a></p>
+
+        
         <div>
             <h1>PROGETTO AMM: SardiniaInFood</h1>
             <form name="page" action="php/index.php" method="GET">
                 <input type="hidden" name="page" value="0">
-                <input type="submit" value="ACCEDI AL PROGETTO">
+                <input type="submit" value="LOGIN AL PROGETTO">
             </form>
         </div>
     </body>
