--- a/SardiniaInFood/index.html
+++ b/SardiniaInFood/index.html
@@ -96,7 +96,7 @@ and open the template in the editor.
             <h1>PROGETTO AMM: SardiniaInFood</h1>
             <form name="page" action="php/index.php" method="GET">
                 <input type="hidden" name="page" value="0">
-                <input type="submit" value="LOGIN AL PROGETTO">
+                <input type="submit" value="ACCEDI AL PROGETTO">
             </form>
         </div>
         <p>Cliccare <a href="#">qui</a> per accedere all'applicazione.</p>
