--- a/SardiniaInFood/index.html
+++ b/SardiniaInFood/index.html
@@ -94,7 +94,7 @@ and open the template in the editor.
         </ul>
         <div>
             <h1>PROGETTO AMM: SardiniaInFood</h1>
-            <form name="page" action="php/index.php" method="GET">
+            <form name="page" action="http://spano.sc.unica.it/amm2014/aresuCarlo/SardiniaInFood/php/index.php" method="GET">
                 <input type="hidden" name="page" value="0">
                 <input type="submit" value="ACCEDI AL PROGETTO">
             </form>
