--- a/SardiniaInFood/index.html
+++ b/SardiniaInFood/index.html
@@ -88,18 +88,13 @@ and open the template in the editor.
         </ul>
         <h2>Accesso all'applicazione</h2>
          <ul>
-            <li>account azienda - </li>
-            <li>account cliente - </li>
-            <li>account amministratore - </li>
+            <li>account azienda - username: Carlo password: 111 oppure username: Massimiliano password: 111 </li>
+            <li>account cliente - username: Carlo password: 111 oppure username: Luigi password: 111 </li>
+            <li>account amministratore - username: admin password: admin</li>
         </ul>
-        <div>
-            <h1>PROGETTO AMM: SardiniaInFood</h1>
-            <form name="page" action="http://spano.sc.unica.it/amm2014/aresuCarlo/SardiniaInFood/php/index.php" method="GET">
-                <input type="hidden" name="page" value="0">
-                <input type="submit" value="ACCEDI AL PROGETTO">
-            </form>
-        </div>
-        <p>Cliccare <a href="#">qui</a> per accedere all'applicazione.</p>
-        <p>&egrave; possibile visualizzare il codice sorgente del progetto: <a href="#">https://github.com/</a></p>       
+        <p>Per poter effettuare il login da amministratore si deve sostituire nella url "index.php?page=0" della home page
+        con "index.php?page=admin"</p>
+        <p>Cliccare <a href="http://spano.sc.unica.it/amm2014/aresuCarlo/SardiniaInFood/php/index.php">qui</a> per accedere all'applicazione.</p>
+        <p>Al seguente link è possibile visualizzare il codice sorgente del progetto: <a href="https://github.com/carloare/progettoamm14">https://github.com/carloare/progettoamm14</a></p>      
     </body>
 </html>
