--- a/SardiniaInFood/index.html
+++ b/SardiniaInFood/index.html
@@ -48,6 +48,7 @@ and open the template in the editor.
         Un cliente può subire un richiamo per un commento ritenuto offensivo, per un massimo di tre richiami dopo di che verrà automaticamente bannato.
         Un cliente può essere bannato direttamente.
         Ci potranno essere poi dei casi in cui un commento non è ritenuto offensivo per cui non si prende nessun provvedimento in merito.
+        Per una questione si semplicit&agrave; nel database ho inserito solo aziende che si trovano a Cagliari, Oristano e Sassari.
         </p>
         
         <h2>Requisiti del progetto</h2>
