--- a/SardiniaInFood/index.html
+++ b/SardiniaInFood/index.html
@@ -95,7 +95,7 @@ and open the template in the editor.
         </ul>
         <p>Per poter effettuare il login da amministratore si deve sostituire nella url "index.php?page=0" della home page
         con "index.php?page=admin"</p>
-        <p>Cliccare <a href="http://spano.sc.unica.it/amm2014/aresuCarlo/SardiniaInFood/php/index.php">qui</a> per accedere all'applicazione.</p>
+        <p>Cliccare <a href="http://spano.sc.unica.it/amm2014/aresuCarlo/SardiniaInFood/php/index.php?page=0">qui</a> per accedere all'applicazione.</p>
         <p>Al seguente link è possibile visualizzare il codice sorgente del progetto: <a href="https://github.com/carloare/progettoamm14">https://github.com/carloare/progettoamm14</a></p>      
     </body>
 </html>
