--- a/SardiniaInFood/index.html
+++ b/SardiniaInFood/index.html
@@ -93,8 +93,8 @@ and open the template in the editor.
             <li>account cliente - username: Carlo password: 111 oppure username: Luigi password: 111 </li>
             <li>account amministratore - username: admin password: admin</li>
         </ul>
-        <p>Per poter effettuare il login da amministratore si deve sostituire nella url "http://spano.sc.unica.it/amm2014/aresuCarlo/SardiniaInFood/php/index.php?page=0" della home page
-        con "http://spano.sc.unica.it/amm2014/aresuCarlo/SardiniaInFood/php/index.php?page=admin"</p>
+        <p>Per poter effettuare il login da amministratore si deve sostituire nella url "page=0" della home page
+        con "page=admin"</p>
         <p>Cliccare <a href="http://spano.sc.unica.it/amm2014/aresuCarlo/SardiniaInFood/php/index.php?page=0">qui</a> per accedere all'applicazione.</p>
         <p>Al seguente link è possibile visualizzare il codice sorgente del progetto: <a href="https://github.com/carloare/progettoamm14">https://github.com/carloare/progettoamm14</a></p>      
     </body>
